추가구현사항 및 심화구현사항 구현 완료